--- a/src/scss/globals/_resets.scss
+++ b/src/scss/globals/_resets.scss
@@ -11,7 +11,7 @@
 }
 
 html {
-  font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+  // font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
